Fixed menu icon not working on mobile

--- a/app/home/Home.css
+++ b/app/home/Home.css
@@ -109,3 +109,11 @@
 		transform: translateY(10px);
 	}
 }
+@media (max-width: 768px) {
+	.welcomeTxt {
+		font-size: 5rem;
+	}
+	.subTxt {
+		font-size: 1rem;
+	}
+}
